# brain-tumor-mlops

./:  .hadolint.yaml  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py  setup.cfg
.github/workflows/: ci.yml  docker.yml  lint.yml
docker/: Dockerfile.serve  Dockerfile.train
examples/: api_usage_examples.py
models/: class_names.json
scripts/: verify_api.py  verify_cicd.py  verify_docker.py
src/: config.py
src/api/: main.py  schemas.py
src/data/: dataset.py
src/demo/: __init__.py  gradio_app.py
src/mlflow_utils/: __init__.py  comparison.py  registry.py  tracking.py
src/models/: cnn_model.py
src/training/: train.py
tests/: test_api.py  test_model.py
