[metadata]
name = brain-tumor-mlops
version = 1.0.0
description = Brain Tumor Classification MLOps Pipeline
author = Rima
author_email = rima.alaya033@gmail.com

[flake8]
max-line-length = 127
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    env,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    mlruns
ignore =
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    E402   # module level import not at top of file
per-file-ignores =
    __init__.py:F401

[isort]
profile = black
line_length = 127
skip = .venv,venv,env,build,dist,mlruns
known_third_party = tensorflow,fastapi,pydantic,numpy,pandas,sklearn,mlflow

[mypy]
python_version = 3.10
ignore_missing_imports = True
disallow_untyped_defs = False
warn_return_any = False
warn_unused_configs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    pass